bugfix navbar z-index

--- a/front/src/components/datepicker/datePicker.scss
+++ b/front/src/components/datepicker/datePicker.scss
@@ -1,5 +1,5 @@
 .datepicker_body{
-    z-index: 99;
+
     padding: 0 8px 0 8px;
 
     display: flex;
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+
 
 
     .react-datepicker__input-container>input{
@@ -19,6 +20,11 @@
         border: 1px solid rgb(83, 80, 80);
         padding: 2px 2px 2px 6px;
     }
+    .react-datepicker {
+        z-index: 999 !important;
+        position: relative;
+        top: 0;
+      }
 
 
 }
